# iLQG-MuJoCo

./: .clang_complete  .gitignore  CMakeLists.txt  Makefile  README.md  config_inv_pen.h  main.cpp  main_inv_pen.cpp
MakeFile/: makefile
cmd/: basic.cpp
env/: hopper.cpp
inc/: derivative.h  differentiator.h  ilqr.h  linear_dynamics.h  lqr.h  mjderivative.h  update.h  util.h
inc/inverted_pendulum/: cost.h  inverted_pendulum.h
include/: anim.h  cost.h  cost_inv_pen.h  ilqr.h  lindy.h  types.h
jnk/: cost.cpp  cost.h  ilqr.cpp  ilqr.h  lindy.cpp  main.cpp  types.h
model/: .humanoid.xml.swp  ant.xml  hopper.xml  inverted_pendulum.xml  pusher.xml  striker.xml  thrower.xml  walker2d.xml
model/Atlas/: MUJOCO_LOG.TXT  atlas.xml
res/: humanoid.xml
src/: anim.cpp  cost.cpp  cost_inv_pen.cpp  derivative.cpp  ilqr.cpp  lindy.cpp  lqr.cpp  mjderivative.cpp  test.cpp  update.cpp  util.cpp
src/inverted_pendulum/: cost.cpp  inverted_pendulum.cpp
tst/: test_derivatives.cpp
